fixed css layout issue

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,6 +3,7 @@
 header {
   background-color: #008484;
   width: 100%;
+  height: auto;
 }
 
 header *{
