--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -14,13 +14,14 @@ html, h1,h2,h3,h4,h5,h6 {
 
 body {
   width: 100vw;
+  height: 100vh;
   background-color: #eae9e9;
   margin: 0;
   padding: 0;
   display: flex;
   position: relative;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
